# instagram-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  SETUP.md  audit.py  auth.py  pyproject.toml  requirements.txt  server.json  server.py  validators.py
.github/workflows/: publish-mcp.yml  test.yml
docs/: APP_REVIEW.md
instagram_mcp/: __init__.py  auth.py  graph_client.py  server.py
tests/: test_basic.py
